# poc-tmp

./: .gitignore  README.md  Strace.pptx
src/camera/: Focuser.py  Makefile  README.txt  camera-fdsrc.c  filter.c  filter.h  filter_db_init.c  filter_sysname_gen.c  mqtt_testlib.c  plugin-libcamera-vid-exe.c  plugin-libcamera-vid.c  plugin-testlib.c  script.sed  spawn_streamer.sh  spawn_workload.sh  subscriber.c  sysname_gen.c
src/camera/config/: plugin-template.conf
src/camera/include/: mqtt_testlib.h  plugin-testlib.h  test.h
src/camera/python/: client.py  server.py
src/camera/python/cgroup/test0_no_monitoring/: fps-2.txt
src/camera/python/cgroup/test1_linux_scheduler/: control-3.txt  control-4.txt  fps-2.txt
src/camera/python/cgroup/test2_affinity_monitoring0-2_application3/: control-1.txt  control-2.txt  fps-2.txt
src/camera/python/cgroup/test2_affinity_monitoring01_applicatoin_23/: control-1.txt  fps-1.txt
src/camera/python/cgroup/test2_affinity_monitoring0_applicatoin_1-3/: control-2.txt  fps-1.txt  fps-2.txt  fps-3.txt
src/camera/python/cgroup/test2_affinity_monitoring1-3_application0/: control-1.txt  control-2.txt  fps-3.txt  fps-4.txt  fps-7.txt
src/camera/python/cgroup/test2_affinity_monitoring2-3_app0-1/: control-3.txt  control-4.txt
src/camera/python/cgroup_daemon_isolation_new/no_monitoring/: control-1.txt  control-2.txt  fps-1.txt  (+5 more)
src/oauth/auth_client/: Cargo.toml  request.py
src/oauth/auth_client/src/: main.rs
src/oauth/auth_server/: __init__.py  app.py  auth.py  models.py  oauth2.py
src/oauth/auth_server/templates/: base.html
(+425 files in other folders)
